# rtl_433

./: Dockerfile
include/: rtl_433_devices.h
src/: CMakeLists.txt
src/devices/: random_remote.c  random_switch.c
